# se3-reconnaisance

./: .gitignore  README.md  package-lock.json  pyproject.toml  run.sh
.github/: dependabot.yml
data/: README.md
docs/: ANALYSIS_LAYER.md  CHALLENGE.md  MANEUVER_ANALYSIS.md  THREAT_LIBRARY.md  architecture.md  challange.md  conventions.md  current-focus.md  data.md  module-map.md  repo-context.md
src/: config.json
src/backend/: README.md  app.py  fields.py  io.py  terrain.py  threat_template.py  units.py  visibility.py
src/backend/scripts/: inspect_ply.py  prepare_web.py  render_rasters.py
src/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/public/assets/: apc.glb  assault.glb  at_team.glb  atgm_team.glb  ifv.glb  mortar.glb  sniper.glb  tank.glb
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: AnalyzingSpinner.tsx  DangerAlert.tsx  FriendlyPanel.tsx  Hud.tsx  InfoPanelPopup.tsx  ObjectPopup.tsx  PlacedUnitPopup.tsx  SceneCanvas.tsx  Sidebar.tsx  ThreatPanel.tsx  ThreatPopup.tsx
src/frontend/src/engine/: Viewer.ts
src/frontend/src/lib/: api.ts  colors.ts  store.ts  types.ts  utils.ts
